# profile.wearable.apps.native.indicator-win

./: .cproject  .project  CMakeLists.txt  LICENSE  app.default.include  irfan.abdul@107.108.86.54  org.tizen.windicator.efl  org.tizen.windicator.manifest  org.tizen.windicator.rule  org.tizen.windicator.xml  project.config
data/edje/: color_classes.edc  windicator.edc  windicator_battery_icon.edc  windicator_battery_layout.edc  windicator_bluetooth_icon.edc  windicator_brightness.edc  windicator_callfwd_layout.edc  windicator_connect_icons.edc  windicator_dnd_layout.edc  windicator_dynamic.edc  windicator_dynamic_icon.edc  windicator_flight_mode_layout.edc  windicator_moment_bar.edc  windicator_moment_bar_for_3g.edc  windicator_moment_view.edc  windicator_music_layout.edc  windicator_rssi_icons.edc  windicator_scs.edc  windicator_volume.edc
include/: log.h  windicator.h  windicator_battery.h  windicator_brightness.h  windicator_call_fwd_btn.h  windicator_connection.h  windicator_dbus.h  windicator_dnd_btn.h  windicator_dynamic.h  windicator_flight_mode.h  windicator_moment_bar.h  windicator_moment_view.h  windicator_music_btn.h  windicator_scs.h  windicator_util.h  windicator_volume.h
packaging/: org.tizen.windicator.spec  org.tizen.windicator.spec~
po/: CMakeLists.txt  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  (+44 more)
res/edje/: windicator_battery_icon.edc  windicator_battery_layout.edc  windicator_brightness.edc  windicator_callfwd_layout.edc  windicator_connect_icons.edc  windicator_dynamic.edc  windicator_dynamic_icon.edc  windicator_moment_bar.edc  windicator_moment_view.edc  windicator_scs.edc  windicator_volume.edc
src/: windicator.c  windicator_battery.c  windicator_brightness.c  windicator_call_fwd_btn.c  windicator_connection.c  windicator_dnd_btn.c  windicator_dynamic.c  windicator_flight_mode.c  windicator_moment_bar.c  windicator_moment_view.c  windicator_music_btn.c  windicator_scs.c  windicator_util.c  windicator_volume.c
